--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bandit==1.7.1
 coverage==6.2
 flake8==4.0.1
 flake8-docstrings==1.6.0
+mypy==0.910
 packaging==21.3
 pre-commit==2.16.0
 pytest==6.2.5
