--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,32 @@ name: main
 on: [push]
 
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
+  static-analysis:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        python-version: [ "3.10" ]
+        os: [ ubuntu-latest ]
+    name: Static Analysis
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          python_version: 3.10
-      - run: py --version
+          python-version: ${{ matrix.python-version }}
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: Install lint dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Lint Python code
+        run: flake8 .
+      - name: Check Python formatting
+        run: black .
+      - name: Check types
+        run: mypy .
+      - name: Check security issues
+        run: bandit .
+      - name: Check security issues
+        run: bandit .
