--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ ubuntu-latest ]
     name: Static Analysis
     steps:
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.os }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
@@ -21,7 +21,7 @@ jobs:
       - name: Install lint dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --requirement requirements.txt
       - name: Lint Python code
         run: flake8 .
       - name: Check Python formatting
@@ -32,3 +32,24 @@ jobs:
         run: bandit .
       - name: Check security issues
         run: bandit .
+
+  run-tests:
+    runs-on: ${{ matrix.os }}
+    continue-on-error: true
+    strategy:
+      matrix:
+        python-version: [ "3.10" ]
+        os: [ ubuntu-latest ]
+    name: Test with Python ${{ matrix.python-version }} on ${{ matrix.os }}
+    steps:
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - uses: actions/checkout@v2
+      - name: Install test dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --requirement requirements.txt
+      - name: Run tests
+        run: pytest --cov
