--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,24 @@ jobs:
           pip install --requirement requirements.txt
       - name: Run tests
         run: pytest --cov
+
+  build-docs:
+    runs-on: ${{ matrix.os }}
+    continue-on-error: true
+    strategy:
+      matrix:
+        python-version: [ "3.10" ]
+        os: [ ubuntu-latest ]
+    name: Build docs with Python ${{ matrix.python-version }} on ${{ matrix.os }}
+    steps:
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - uses: actions/checkout@v2
+      - name: Install docs dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --requirement requirements.txt
+      - name: Build docs
+        run: make docs
