--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,16 +12,15 @@ repos:
       - id: end-of-file-fixer
       - id: requirements-txt-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.6.0
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
     hooks:
-      - id: reorder-python-imports
-        args: [ --application-directories, '.:src', --py37-plus ]
+      - id: isort
+        name: isort (python)
   - repo: https://github.com/psf/black
     rev: 21.12b0
     hooks:
       - id: black
-        args: [ --line-length=79 ]
   - repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
     hooks:
@@ -30,7 +29,7 @@ repos:
     rev: v2.29.1
     hooks:
       - id: pyupgrade
-        args: [ --py37-plus ]
+        args: [ --py310-plus ]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.910-1
     hooks:
