--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flake8-comprehensions==3.7.0
 flake8-docstrings==1.6.0
 flake8-return==1.1.3
 flake8-sfs==0.0.3
+isort==5.10.1
 mypy==0.910
 packaging==21.3
 pre-commit==2.16.0
