--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,10 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
+  - repo: https://github.com/hadialqattan/pycln
+    rev: v1.1.0 # Possible releases: https://github.com/hadialqattan/pycln/releases
+    hooks:
+      - id: pycln
   - repo: https://github.com/psf/black
     rev: 21.12b0
     hooks:
