--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ isort==5.10.1
 mypy==0.910
 packaging==21.3
 pre-commit==2.16.0
+pycln==1.1.0
 pytest==6.2.5
 pytest-cov==3.0.0
 pytest-pythonpath==0.7.3
