--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install lint dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --requirement requirements.txt
+          pip install --requirement requirements-dev.txt
       - name: Lint Python code
         run: flake8 .
       - name: Check Python formatting
@@ -52,7 +52,7 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --requirement requirements.txt
+          pip install --requirement requirements-test.txt
       - name: Run tests
         run: pytest --cov
 
@@ -73,6 +73,6 @@ jobs:
       - name: Install docs dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --requirement requirements.txt
+          pip install --requirement requirements-docs.txt
       - name: Build docs
         run: make docs
