CI step to copy `Sphinx` HTML to `docs` directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,4 +75,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install --requirement requirements-docs.txt
       - name: Build docs
-        run: make docs
+        run: |
+          make docs
+          cp -a docs/build/html/. docs/
