--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,10 @@
 addopts =
     -rA
     -v
+    --cov-report html
+    --cov-report xml
+    --cov-branch
+    --cov
+    --junitxml=documents/coverage/report.xml
 python_paths = python_library_template/
 testpaths = tests/
