--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@ flake8-return==1.1.3
 flake8-sfs==0.0.3
 isort==5.10.1
 mypy==0.910
+pep8-naming==0.12.1
 pre-commit==2.16.0
 pycln==1.1.0
 pyupgrade==2.29.1
