Moved `isort` configuration to `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,7 @@
 [tool.black]
-experimental-string-processing = "True"
+experimental-string-processing = true
+
+[tool.isort]
+include_trailing_comma = true
+profile = "black"
+src_paths = "python_library_template/"
