--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ directory = "docs/coverage"
 branch = true
 omit = [
     "*/venv/*",
-    "*/tests/*"
+    "*/tests/*",
 ]
 
 [tool.coverage.report]
