--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ show_missing = true
 output = "docs/coverage/coverage.xml"
 
 [tool.isort]
+force_single_line = true
 include_trailing_comma = true
 profile = "black"
 src_paths = "pysamplelib"
