--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ "3.10" ]
-        os: [ ubuntu-latest ]
+        python-version: ["3.10"]
+        os: [ubuntu-latest]
     name: Static Analysis
     steps:
       - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.os }}
@@ -28,6 +28,8 @@ jobs:
         run: black . --check
       - name: Check unused imports
         run: pycln . --check
+      - name: Absolute imports
+        run: absolufy-imports $(find pysamplelib -name "*.py" | tr "\n" " ")
       - name: Check import order
         run: isort . --check
       - name: Check types
@@ -40,8 +42,8 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        python-version: [ "3.10" ]
-        os: [ ubuntu-latest ]
+        python-version: ["3.10"]
+        os: [ubuntu-latest]
     name: Test with Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
       - name: Set up Python ${{ matrix.python-version }}
@@ -63,8 +65,8 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        python-version: [ "3.10" ]
-        os: [ ubuntu-latest ]
+        python-version: ["3.10"]
+        os: [ubuntu-latest]
     name: Build docs with Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
       - name: Set up Python ${{ matrix.python-version }}
