--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,10 @@ repos:
     rev: v2.1.1 # Possible releases: https://github.com/hadialqattan/pycln/releases
     hooks:
       - id: pycln
+  -   repo: https://github.com/MarcoGorelli/absolufy-imports
+    rev: v0.3.0
+    hooks:
+    -   id: absolufy-imports
   - repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
