--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install --requirement requirements-dev.txt
       - name: Lint Python code
-        run: flake8 .
+        run: ruff .
       - name: Check Python formatting
         run: black . --check
-      - name: Check unused imports
-        run: pycln . --check
       - name: Absolute imports
         run: absolufy-imports $(find pysamplelib -name "*.py" | tr "\n" " ")
-      - name: Check import order
-        run: isort . --check
       - name: Check types
         run: mypy .
       - name: Check security issues
