--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,15 +5,9 @@ absolufy-imports==0.3.1
 bandit==1.7.4
 black==22.6.0
 blacken-docs==1.12.1
-flake8==5.0.4
-flake8-comprehensions==3.10.0
-flake8-docstrings==1.6.0
-flake8-return==1.1.3
-flake8-sfs==0.0.3
-isort==5.10.1
 mypy==0.971
 pep8-naming==0.13.1
 pre-commit==2.20.0
-pycln==2.1.1
 pyupgrade==2.37.3
 radon==5.1.0
+ruff==0.0.262
