fix: `mypy` to ignore `setup.py`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ profile = "black"
 src_paths = "pysamplelib"
 
 [tool.radon]
-exclude = "venv/*,tests/*"
+exclude = "tests/*,venv/*"
 show_complexity = true
 show_mi = true
 total_average = true
@@ -55,7 +55,7 @@ convention = "google"
 [tool.mypy]
 mypy_path = "pysamplelib"
 files = "."
-exclude = "venv|__init__.py|tests|docs"
+exclude = "__init__.py|setup.py|docs|tests|venv"
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules  -rA --verbose"
