--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@ black==22.6.0
 blacken-docs==1.12.1
 mypy==0.971
 pep8-naming==0.13.1
+perflint==0.7.3
 pre-commit==2.20.0
 pyupgrade==2.37.3
 radon[toml]==6.0.1
