--- a/.gitignore
+++ b/.gitignore
@@ -214,6 +214,7 @@ Temporary Items
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!*.code-snippets
 *.code-workspace
 
 # Local History for Visual Studio Code
