--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,3 +34,9 @@ repos:
     hooks:
       - id: pyupgrade
         args: [ --py310-plus ]
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.4
+    hooks:
+      - id: bandit
+        args: [--configfile=pyproject.toml, --severity-level=medium, .]
+        additional_dependencies: ["bandit[toml]"]
