--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,11 @@ jobs:
           pip install --requirement requirements-test.txt
       - name: Run tests
         run: make coverage
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: docs/coverage
       - name: Run doctests
         run: pytest --doctest-modules pysamplelib
 
