--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
         with:
           name: code-coverage-report
           path: docs/coverage
+          retention-days: 5
       - name: Run doctests
         run: pytest --doctest-modules pysamplelib
 
