--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,14 @@ repos:
       - id: end-of-file-fixer
       - id: requirements-txt-fixer
       - id: trailing-whitespace
+  - repo: local
+    hooks:
+      - id: removestar
+        name: removestar
+        entry: removestar
+        language: system
+        types: [python]
+        args: [-i, pysamplelib]
   - repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
