--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
+    "charliermarsh.ruff",
     "editorconfig.editorconfig",
-    "ms-python.black-formatter",
     "ms-python.python"
   ]
 }
