--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,32 +12,17 @@ repos:
       - id: end-of-file-fixer
       - id: requirements-txt-fixer
       - id: trailing-whitespace
-  - repo: local
-    hooks:
-      - id: removestar
-        name: removestar
-        entry: removestar
-        language: system
-        types: [python]
-        args: [-i, pysamplelib]
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
-    hooks:
-      - id: black
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.0.275"
+    rev: v0.1.9
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
-    hooks:
-      - id: blacken-docs
+      - id: ruff-format
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.37.3
     hooks:
       - id: pyupgrade
-        args: [ --py310-plus ]
+        args: [--py37-plus]
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.5
     hooks:
