--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,27 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 
-on: [release]
+on:
+  release:
+    types: [published]
 
 jobs:
   pypi-publish:
-    name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
+    name: Build and publish Python 🐍 distributions 📦 to ${{ matrix.environment.name }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        environment:
+          - name: testpypi
+            url: https://test.pypi.org/project/behave-cucumber-matcher
+            token: TEST_PYPI_API_TOKEN
+            repository-url: https://test.pypi.org/legacy/
+          # - name: pypi
+          #   url: https://pypi.org/project/behave-cucumber-matcher
+          #   token: PYPI_API_TOKEN
+          #   repository-url: https://upload.pypi.org/legacy/
     environment:
-      name: testpypi
-      url: https://test.pypi.org/project/pysamplelib
+      name: ${{ matrix.environment.name }}
+      url: ${{ matrix.environment.url }}
     permissions:
       id-token: write
     steps:
@@ -19,9 +32,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build package
         run: make build
-      - name: Publish distribution 📦 to Test PyPI
+      - name: Publish distribution 📦 to ${{ matrix.environment.name }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
+          password: ${{ secrets[matrix.environment.token] }}
+          repository-url: ${{ matrix.environment.repository-url }}
