Align Renovate PRs with default dependencies label

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,6 +8,6 @@
     ":automergeBranch",
     ":automergeMinor"
   ],
-  "labels": ["dependencies"],
+  "labels": [":robot: dependencies"],
   "prHourlyLimit": 0
 }
